; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_header.c_dont_expect_notify.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_header.c_dont_expect_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nExpectedNotify = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"notification count %d\0A\00", align 1
@unexpectedNotify = common dso_local global i32* null, align 8
@nUnexpectedNotify = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @dont_expect_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dont_expect_notify(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @nExpectedNotify, align 4
  %4 = icmp slt i32 %3, 10
  %5 = zext i1 %4 to i32
  %6 = load i32, i32* @nExpectedNotify, align 4
  %7 = call i32 @ok(i32 %5, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = load i32, i32* @nExpectedNotify, align 4
  %9 = icmp slt i32 %8, 10
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = load i32*, i32** @unexpectedNotify, align 8
  %13 = load i32, i32* @nUnexpectedNotify, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* @nUnexpectedNotify, align 4
  %15 = sext i32 %13 to i64
  %16 = getelementptr inbounds i32, i32* %12, i64 %15
  store i32 %11, i32* %16, align 4
  br label %17

17:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @ok(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
